# devops_studies

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  CI_aws_deploy.yml  CI_pytest_coverage.yml  coverage.yml  docker.yml  pytest.yml  python-app.yml
ac1/: .coverage
ac1/app/: game_plat.py
ac1/htmlcov/: d_5f5a17c013354698___init___py.html  d_5f5a17c013354698_game_plat_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_usr_1_fail_py.html  d_a44f0ac069e85531_test_usr_1_score_to_cripto_py.html  d_a44f0ac069e85531_test_usr_2_fail_py.html  d_a44f0ac069e85531_test_usr_2_premium_users_py.html  d_a44f0ac069e85531_test_usr_3_course_score_py.html  d_a44f0ac069e85531_test_usr_3_fail_py.html  d_a44f0ac069e85531_test_usr_4_course_bonus_py.html  d_a44f0ac069e85531_test_usr_4_fail_py.html  index.html  status.json
ac1/tests/: test_usr_1_fail.py  test_usr_1_score_to_cripto.py  test_usr_2_fail.py  test_usr_2_premium_users.py  test_usr_3_course_score.py  test_usr_3_fail.py  test_usr_4_course_bonus.py  test_usr_4_fail.py
fastapi-crud/: docker-compose.yaml
studies/: .coverage  coverage.xml
studies/api/: config.py  main.py  model.py
studies/app/: build_graph.py  main.py
studies/htmlcov/: d_5f5a17c013354698___init___py.html  d_5f5a17c013354698_build_graph_py.html  d_5f5a17c013354698_main_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_entre_16_e_18_py.html  d_a44f0ac069e85531_test_entre_18_e_55_py.html  d_a44f0ac069e85531_test_maior_55_py.html  d_a44f0ac069e85531_test_menor_16_py.html  index.html  (+9 more)
(+28 files in other folders)
