[tool.poetry]
name = "studies"
version = "0.1.0"
description = ""
authors = ["Natanael Vitorino <vitorino.natanael@outlook.com>"]
readme = "README.md"
packages = [{include = "studies"}]

[tool.poetry.dependencies]
python = "^3.8" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"